# rupt

./: Cargo.toml  README.md
src/: main.rs  renderer.rs  wrapper.rs
src/renderer/: figure.rs  material.rs  picture.rs  reflection.rs  renderer.rs  scene.rs
src/renderer/figure/: rectangle.rs  rhombus.rs  sphere.rs
src/wrapper/: color.rs  ray.rs  vec.rs
