[package]
name = "rupt"
version = "0.1.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
